--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ header button{
     font-size: 18px;
     font-weight: 400;
     box-shadow: var(--box-shadow);
+    cursor: pointer;
       
 }
 
@@ -106,6 +107,7 @@ header button{
     border-radius: 25px;
     border: none;
     padding: 16px 85px;
+    cursor: pointer;
 }
 
 .right_sec img{
