--- a/style.css
+++ b/style.css
@@ -276,27 +276,15 @@ width: 100%;
 
         /* Media Query */
 
-        @media(max-width: 375px){
+        
 
-            .left_sec p {
-                font-size: 9px !important;
-            }
-            .overlay_box {
-                width: 73% !important;
-                padding: 33px 11px !important;
-                left: 15% !important;
-
-        }
-
-    }
-
-        @media(max-width: 414px){
+        /* @media(max-width: 414px){
 
             .left_sec p {
                 font-size: 11px;
             }
 
-        }
+        } */
 
         @media(max-width: 768px){
             .left_sec p {
@@ -315,10 +303,6 @@ width: 100%;
                 font-size: 7px;
             }
         }
-
-
-
-
 
 
 
@@ -427,3 +411,16 @@ width: 100%;
             }
         }
         
+        @media(max-width: 375px){
+
+            .left_sec p {
+                font-size: 9px !important;
+            }
+            .overlay_box {
+                width: 73% !important;
+                padding: 33px 11px !important;
+                left: 15% !important;
+
+        }
+
+    }
