--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ width: 100%;
 
         } */
 
-        @media(max-width: 768px){
+        @media only screen and (min-width: 768px){
             .left_sec p {
         
                 font-size: 11px;
