--- a/style.css
+++ b/style.css
@@ -417,7 +417,7 @@ width: 100%;
         
 
 
-        @media(max-width: 576px){
+        @media(max-width: 414px){
 
             header img {
                 width: 93px;
@@ -435,8 +435,10 @@ width: 100%;
             }
 
             .left_sec p{
-                font-size: 0.9rem;
+                font-size: 11px;
                 font-weight: 400;
             }
+            .attribution {
+                font-size: 13px;
         }
-     
+    }
